* you must use the "init" function when you have been using etckeeper-ng for a while otherwise there will
be problems with $JOURNAL
* $JOURNAL keeps track of what a user has done when using "backup" or "add" command
* new command "list-excludes" to list the exclude patterns in your exclude file
* using the "init" command is no longer interactive: the first commit is always named: inital commit
* all commands showing comments about what action takes place at runtime 
* the "add" option now only takes one argument now this was part of a major bug fix
* in keeper.conf you can disable looking for changed permissions if you dont want this
* in keeper.conf you can configure what will be changed
* when reinitialze with "init command" the script no longer deletes your excludes
* fixed bugs: 
		- broken exclude command
		- help function did still show the old options in the header line
		- when using exclude, already added exclude patterns were getting added again
		- output of rsync and git is more quite now
		- when the user entered an unknown command the help function was not getting called
		- exluding a file by describing the absolute path did not exclude this file
		- when using check function the output of the log file was rather confusing
		- init command was broken
		- missing tput sgr0 in check_root leaving red color when script abborts as non root user
		- git config core.quotepath false fixes issues with german umlauts
		- using check command without exclude file produced an error from rsync
		- when using exclude: command the first time produced an error regarding 
		- when using check command the files with spaces in filenames were not printed correctly
		- when using backup command the files with spaces in filenames were not handled correclty
		- when using add this was totally broken
		- in module check_perms and check_perms_S filenames with spaces were not recognized

=== 0.2.1 - 06.02.2012 ===
* etckeeper is split up in modules for better development