@@ -20,8 +20,10 @@ EXCLUDEFILE="/root/.etcbackup/excludes"
 LOGFILE="/root/keeper.log"
 
 # This is the file where etckeeper logs his history
-# this would be pretty much the same what you would see when you execute t
-# he "list command"
+# this would be pretty much the same what you would see when you execute 
+# the "journal command"
+# Note that unless you are using multiple directories for backups this
+# should be under the same path as your $BACKUPDIR
 JOURNAL="/root/.etcbackup/journal.log"
 
 # This is a core git variable
